--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@
 
 html,
 body {
+    background: url(../img/1.jpg) repeat;
+    background-size: cover;
     height: 100%;
 }
+
 
 body {
     display: flex;
@@ -18,4 +21,37 @@ body {
 
 .container {
     margin: 0 auto;
+}
+
+.character-card {
+    min-height: 5em;
+    display: inline-block;
+    vertical-align: middle
+}
+
+.title {
+    text-align: center;
+    padding-top: 15px;
+    background: linear-gradient(to left, #e3ece6, #92dcb7);
+    margin: 5px;
+}
+
+.image {
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+h1, h2 {
+    margin-top: 10px;
+    background: linear-gradient(to left, #e3ece6, #92dcb7);
+    border-radius: 5px;
+}
+
+.episodes, .description {
+    background: linear-gradient(to left, #e3ece6, #92dcb7);
+    border-radius: 5px;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    opacity: .9;
+    padding-left: 20px;
 }
